# lrgrep

./: .gitignore  CHANGELOG.md  DEVISING-RULES-TODO.md  DEVISING-RULES.md  FUTURE.md  JOURNAL.md  LICENSE  Makefile  README.md  REFERENCE.md  TODO.md  WORKFLOWS.md  demo.sh  draft.md  dune  dune-project  lexer.mll  lexgen.ml  lrgrep.opam  main.ml  manual.md  parser.mly  setup_shell.sh  syntax.ml  test_ko.ml  test_ko_01.ml  test_ko_03.ml  test_ko_06.ml  test_ko_07.ml
attic/: coBitSet.ml
attic/dump/: Makefile  dune
completionist/: Makefile  completionist.ml  dune  red.dot  reduction_graph.ml
demo/: curry_pattern_1.ml  curry_pattern_2.ml  curry_pattern_3.ml  curry_pattern_4.ml  demo.sh  pres.sh  setup_shell.sh  stackoverflow2.ml  test_ko_01.ml  test_ko_01_.ml  test_ko_03.ml  test_ko_05.ml  test_ko_06.ml  test_ko_08.ml  test_ko_10.ml  test_ko_11.ml
doc/: Makefile  implementation.md  manual.md  manual.tex  sem.tex
doc/index/: Makefile  README.md  ix-commands.tex  ix-data.tex  mkindex.sh
doc/pres/: Makefile  dfa.en.odg  dfa.fr.odg  first-demo.pptx  main.en.tex  main.fr.tex  main.tex
examples/: dune
examples/calc/: Makefile  dune  main.ml  parse_errors.mlyl  parser.mly  test.txt
examples/ocaml/: all.md  cleaned.md  enum-clean.md  enum-org.md  enum.md  output.lrgrep  output.md  parser.mly  pp.mly
examples/oxcaml/: dune  parse_error.lrgrep
examples/tiny/: dune  main.ml  parse_errors.lrgrep
examples/tiny-parameterized/: dune  main.ml  parse_errors.lrgrep  parser.mly
ijkstra/: Makefile  dune  ijkstra.ml  reduction_graph.ml
lib/fix/: Indexing.mli  README.md
lib/middle/: Makefile  dune  intf.ml  lr1.ml  lr1.mli  reduction_graph.ml  regex.ml  sigma.ml  sigma.mli
lib/utils/: .merlin  README.md  bitSet.ml  bitSet.mli  cmon.ml  cmon.mli  dune  fastdom.ml  indexBuffer.ml  indexBuffer.mli  indexMap.ml  indexMap.mli  indexRefine.ml  indexSet.ml  indexSet.mli  intSet.ml  intSet.mli  misc.ml  mulet.ml  mulet.mli  refine.ml  refine.mli  scc.ml  scc.mli  setSig.ml  strong.ml  strong.mli  valmari.ml  valmari.mli  (+2 more)
ocaml/: ast_helper.ml  ast_iterator.ml  builtin_attributes.ml  builtin_attributes.mli  clflags.ml  completion.ml  docstrings.ml  dune  embed.ml  frontend.ml  interpreter.ml  jane_syntax.ml  jane_syntax_parsing.ml  language_extension.ml  lexer_raw.mll  location.ml  misc.ml  misc.mli  parse_errors.mlyl  parse_errors_auto.mlyl  parser_def.ml  parser_raw.mly  recovery.ml  warnings.ml
ocaml/testsuite/: Makefile  dune  stackoverflow1.ml  stackoverflow4.ml  test_0000.mli  test_0001.ml  test_0002.ml  test_0003.ml  test_0004.ml  test_0005.ml  test_0006.ml  test_0007.ml  test_0008.ml  test_0009.ml  test_0010.ml  test_0011.ml  test_0012.ml  test_0014.ml  test_0015.ml  test_0017.ml  test_0018.ml  test_0019.ml  test_0020.ml  test_0021.ml  test_0022.ml  test_0023.ml  test_0024.ml  test_0025.ml  test_0026.ml  test_0027.ml  test_0028.ml  test_0029.ml  test_0030.ml  test_0031.ml  test_0032.ml  test_0033.ml  test_0034.ml  test_0035.ml  test_0036.ml  test_0037.ml  (+808 more)
old/: DEVISING-RULES.md  FUTURE.md  Makefile  README.md  compile_command.ml  enum.ml  interpret_command.ml  sentences.ml
recovery/: Makefile  completion.ml  dune  recover_attrib.ml  recover_attrib.mli  recovery.ml  synthesis.ml  synthesis.mli
runtime/: analyser_def.ml  dune
src/: LRijkstraFast.ml  Makefile  README.md  analyser_def.ml  cmdline.ml  common.ml  common.mli  compile_command.ml  dfa.ml  dune  enum.ml  enum_command.ml  grammar.mli  grammar_info.ml  grammar_raw.ml  grammar_raw.mli  import_grammar.ml  interpret_command.ml  interpreter_draft.ml  lexer.mli  lexer.mll  main.ml  main2.ml  main_legacy.ml  message_file.ml  minilrgrep.ml  parser.mly  redgraph.ml  redgraph.mli  reduction.ml  reduction.mli  regexp.ml  regexp.mli  sample.ml  sigs.ml  syntax.ml  test.ml  test_lexer.mlyl  transl.ml  transl.mli  (+1 more)
src/back/: README.md  coverage.ml  dfa.ml  dune  regalloc.ml  sigs.ml
src/dump/: dump.ml
src/fix/: Indexing.ml  Indexing.mli  README.md  dune
src/front/: dune  lexer.mli  lexer.mll  parser.mly  syntax.ml
src/interpreter/: dune  interpreter.ml  lrgrep_interpreter.ml
src/kernel/: automata.ml  codegen.ml  completion.ml  coverage.ml  dcoverage.ml  denumeration.ml  dune  enumeration.ml  info.ml  info.mli  lrc.ml  lrc.mli  reachability.ml  reachability.mli  reachable_reductions.ml  redgraph.ml  redgraph.mli  regexp.ml  regexp.mli  sentence_generation.ml  spec.ml  spec.mli  syntax.ml  transl.ml  viable_reductions.ml
src/lrijkstra/: LRijkstraFast.ml
src/lrijkstra-utils/: dune  tarjan.ml  tarjan.mli
src/mid/: LRijkstraFast.ml  README.md  automata.ml  coverage_tree.ml  dune  info.ml  lrc.ml  reachability.ml  reachable_reductions.ml  reachable_reductions2.ml  redgraph.ml  reduction.ml  regexp.ml  sigs.ml  transl.ml  viable_reductions.ml
src/old/: common.ml  interp.ml  intersect.ml  translate.ml
src/syntax/: dune  syntax.ml
src/utils/: Makefile  boolvector.ml  boolvector.mli  codePrinter.ml  codePrinter.mli  code_printer.ml  code_printer.mli  dune  heap.ml  heap.mli  indexBuffer.ml  indexBuffer.mli  indexMap.ml  indexMap.mli  indexMarks.ml  indexMarks.mli  indexRefine.ml  indexSet.ml  indexSet.mli  indexTable.ml  indexTable.mli  intSet.ml  intSet.mli  intSetMap.ml  intSetMap.mli  intSetSet.ml  intSetSet.mli  intSet_stubs.c  misc.ml  monotonous.ml  monotonous.mli  order_chain.ml  order_chain.mli  refine.ml  refine.mli  setSig.ml  stopwatch.ml  stopwatch.mli  subarg.ml  subarg.mli  (+2 more)
src/utils/bit_lib/: bit_lib.ml  bit_lib_stub.c  dune
src/valmari/: dune  partition.ml  partition.mli  valmari.ml  valmari.mli
support/: dune  lrgrep_bitset.ml  lrgrep_bitset.mli  lrgrep_runtime.ml  lrgrep_runtime.mli  lrgrep_support.ml  lrgrep_support.mli  lrgrep_support_packer.ml  lrgrep_support_packer.mli  sparse_index.ml  tablerepr.ml
test/lrgrep-example/bad/: dune  test00.exp  test00.in  test01.exp  test01.in  test02.exp  test02.in  test03.exp  test03.in  test04.exp  test04.in  test05.exp
test/lrgrep-example/src/: Makefile  dune  errors.lrgrep  errors.mlyl  lexer.mll  main.ml  parser.mly
tiny/: dune  main.ml
(+43 files in other folders)
