opam-version: "2.0"
maintainer: "Frederic Bour <frederic.bour@lakaban.net>"
authors: "Frederic Bour <frederic.bour@lakaban.net>"
homepage: "https://gitlab.inria.fr/fbour/lrgrep"
bug-reports: "https://gitlab.inria.fr/fbour/lrgrep"
license: "ISC"
dev-repo: "git+https://gitlab.inria.fr/fbour/lrgrep.git"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.0.0"}
  "menhir" {>= "20211128"}
  "cmon" {>= "0.2"}
]
synopsis: "Analyse the stack of a Menhir-generated LR parser using regular expressions"
