(executable
 (name main)
 (public_name lrgrep)
 (modules main)
 (libraries cmon fix front kernel menhirSdk support utils valmari perfctl))

(executable
 (name minilrgrep)
 (modules minilrgrep)
 (libraries cmon fix front kernel menhirSdk support unix utils valmari))

(executable
 (name test)
 (libraries bit_lib))
