(executable
 (name main)
 (public_name lrgrep)
 (modules main message_file)
 (libraries cmon fix front kernel menhirSdk support utils valmari perfctl))

(executable
 (name minilrgrep)
 (modules minilrgrep)
 (libraries cmon fix front kernel menhirSdk support unix utils valmari))

(executable
 (name test)
 (libraries bit_lib))
