(menhir
  (modules parser)
  (flags :standard --inspection --table --cmly))

(rule
  (targets parse_errors.ml)
  (deps    parser.cmly parse_errors.lrgrep)
  (action
     (run lrgrep -v -v compile -s parse_errors.lrgrep -g parser.cmly -o parse_errors.ml)))

(executable
 (name main)
 (libraries menhirLib lrgrep.runtime))
