(menhir
  (modules parser)
  (flags :standard --inspection --table --cmly))

(rule
  (targets parse_errors.ml)
  (deps    parser.cmly parse_errors.mlyl)
  (action
     (run lrgrep parser.cmly parse_errors.mlyl
          compile -o parse_errors.ml)))

(executable
 (name main)
 (libraries menhirLib lrgrep.runtime))
